--- a/css/index.css
+++ b/css/index.css
@@ -1,25 +1,20 @@
+/* NAVBAR OCH FOOTER (Samma för varje sida) */
 @font-face {
     font-family: Lobster;
     src: url("./Lobster-Regular.ttf");
 }
-html{
+
+html {
     scroll-behavior: smooth;
 }
 
-a, a:hover{
+a,
+a:hover {
     text-decoration: none;
     color: white;
 }
-body{
-    margin: 0;
-    min-height: 100vh;
-    background-color: #343a40;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%239C92AC' fill-opacity='0.25' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"), linear-gradient(to right top, #343a40, #2b2c31, #211f22, #151314, #000000);
-    display: grid;
-    grid-template-rows: auto 1fr auto;
-}
 
-header{
+header {
     display: grid;
     grid-template-columns: 300px 1fr;
     place-items: center;
@@ -29,14 +24,14 @@ header{
     z-index: 10000;
 }
 
-.logo{
+.logo {
     font-family: Lobster;
     color: white;
     font-size: 15px;
-    text-shadow: -2px -2px #000, 2px -2px #000, -2px 2px #000, 2px 2px #000;
+    margin: 0px;
 }
 
-.links{
+.links {
     display: grid;
     grid-auto-flow: column;
     color: white;
@@ -46,8 +41,10 @@ header{
     padding: 30px;
     gap: 20px;
 }
-.links p{
-    margin: 0;
+
+.links a:hover {
+    transform: scale(1.1);
+    transition: all ease-out 0.2s;
 }
 
 footer {
@@ -62,13 +59,47 @@ footer {
     place-content: center;
     gap: 15px;
 }
+/* NAVBAR OCH FOOTER (Samma för varje sida) */
 
+/* Webpage Design */
+@-webkit-keyframes AnimateBG {
+    0% {
+        background-position: 0% 50%;
+    }
 
+    50% {
+        background-position: 100% 50%;
+    }
 
-
-main{
-    min-height: 200vh;
+    100% {
+        background-position: 0% 50%;
+    }
 }
+
+@keyframes AnimateBG {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+body {
+    margin: 0;
+    min-height: 130vh;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    background-image: linear-gradient(-45deg, #3bade3 0%, #576fe6 25%, #9844b7 51%, #ff357f 100%);
+    -webkit-animation: AnimateBG 20s ease infinite;
+    animation: AnimateBG 20s ease infinite;
+}
+/* Webpage Design */
 
 .slider{
     width: 100%;
